
option java_outer_classname="GetHashmapCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message GetHashmapCommand {
	optional int64 requestId = 1;
}